# qs

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  QSConfig.cmake.in  README.md
.github/workflows/: test.yml
examples/: CMakeLists.txt
examples/QSDecoder/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
examples/QSEncoder/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
qs/: qs.cpp  qs.h
qs/decode/: BandDecoder.cpp  BandDecoder.h  BandSpec.h  Controller.cpp  Controller.h  Decoder.cpp  Decoder.h  MultiBandDecoder.cpp  MultiBandDecoder.h  VariableMatrix.cpp  VariableMatrix.h  decode.h
qs/dsp/: Coefficients.h  Envelope.cpp  Envelope.h  HilbertTransform.cpp  HilbertTransform.h  IIRFilter.cpp  IIRFilter.h  math.h
qs/encode/: Encoder.cpp  Encoder.h  encode.h
script/: install  test
script/ci/: install-catch2  install-juce  windows-install-catch2.bat  windows-install-juce.bat  windows-setup.bat  windows-test.bat
script/coefficients/: generate
script/examples/: build  install
test/: CMakeLists.txt  test.cpp
